--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#009ee3" />
     
     <style>
+        body{       background-color:rgb(0, 158, 227) ;}
         *{
             text-decoration: none;
             margin: 0%;
@@ -15,7 +16,7 @@
         }
         .video-trailer{
             width: 100%;
-            height: 100vh;
+            height: 110vh;
           
         }
         video{
