--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="theme-color" content="#009ee3" />
     
     <style>
+        body{
+                background-color:rgb(0, 158, 227) ;    
+        }
       *{
             text-decoration: none;
             margin: 0%;
@@ -14,6 +17,7 @@
             box-sizing: border-box;
         }
         .video-trailer{
+                     margin-top: 20px;
             width: 100%;
             height: 150vh;
           
